# Medicine-Osteoporosis

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: manual.yml  test.yaml
data/interim/: .gitignore  df1_2.csv.dvc  df2_2.csv.dvc
data/processed/: df_merged.csv
data/raw/: .gitignore  Kniga1.xlsx.dvc  data2.csv.dvc  data_csv.csv.dvc  kniga_data.csv.dvc
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: .gitignore  0001.ipynb.dvc  View_data_csv.ipynb  View_data_csv.ipynb.dvc
src/data/: EDA.py  Modelling.py  prerpocessing.py
src/data/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
src/data/catboost_info/learn/: events.out.tfevents
