[tool.poetry]
name = "ded"
version = "0.1.0"
description = ""
authors = ["DEDMOPO3PEAHIMATOP <sergey.prisyazhny@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
openpyxl = '^3.1.2'
python = "^3.10"
pandas = '^1.5.2'
scikit-learn = '^1.2.1'
catboost = '^1.1.1'
dvc = {extras = ['s3'], version = '^2.10.2'}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
